2007-05-26  Rodrigo Moya <rodrigo@gnome-db.org>

	* configure.in:
	* Makefile.am:
	* src/Makefile.am:
	* src/atomato-gui.h
	* src/atomato-gui.glade:
	* src/gui.c:
	* src/main-window.c:
	* src/main.c: started GUI frontend.

2007-05-26  Rodrigo Moya <rodrigo@gnome-db.org>

	* libatomato/atomato.c (initialize): register the shell action provider.

2007-06-25  Rodrigo Moya <rodrigo@gnome-db.org>

	* libatomato/atomato.[ch]: added AtomatoMethod type.
	(atomato_list_methods): new function.

	* libatomato/atomato-action-provider.[ch]: removed list_actions method,
	we'll get the list of actions by reading custom Atomato XML.
	(atomato_action_provider_get_method): new method.
	(atomato_action_provider_run_action): changed arguments list.

	* libatomato/dbus-action-provider.c (dbus_action_provider_list_actions):
	removed not needed method.
	(dbus_action_provider_get_method): implemented new interface method.

	* libatomato/Makefile.am:
	* libatomato/shell-action-provider.c: let's start with the simplest
	action provider.

2007-03-21  Gintautas Miliauskas  <gintas@akl.lt>

	* configure.in: Added lt to ALL_LINGUAS.

2007-02-12  Pema Geyleg  <pema.geyleg@gmail.com>

	* configure.in: Added dz to ALL_LINGUAS.

2007-01-24  Kjartan Maraas  <kmaraas@gnome.org>

	* configure.in: Add nb to ALL_LINGUAS.

2007-01-13  Matic Zgur <mr.zgur@gmail.com>

	* configure.in: Added 'sl' to ALL_LINGUAS.

2007-01-11  Ignacio Casal Quinteiro  <nacho.resa@gmail.com>

	* configure.in: Added 'gl' to ALL_LINGUAS.

2006-12-27  Adam Weinberger  <adamw@gnome.org>

	* configure.in: Added en_CA to ALL_LINGUAS.

2006-12-11  Lucas Rocha  <lucasr@gnome.org>

	* configure.in: Added "pt_BR" to ALL_LINGUAS.

2006-10-27  Wouter Bolsterlee  <wbolster@cvs.gnome.org>

	* configure.in: Added "nl" to ALL_LINGUAS.

2006-10-14  Ilkka Tuohela  <hile@iki.fi>

	* configure.in: Added "fi" to ALL_LINGUAS.

2006-10-02  Josep Puigdemont i Casamajó  <josep.puigdemont@gmail.com>

	* configure.in: Added "ca" to ALL_LINGUAS.
