@@ -1,0 +1,3 @@
+actionsdir = $(datadir)/atomato/actions
+actions_DATA = 			\
+	file_management.atomato
